# showpid

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  build.ps1  build.rs  build.sh  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
examples/: library_usage.rs
src/: config.rs  error.rs  lib.rs  main.rs  window.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration_test.rs
