[package]
name = "showpid"
version = "1.0.4"
edition = "2021"
description = "Cross-platform CLI utility to bring a window to foreground by PID (Windows, Linux, macOS)"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
license = "MIT"
repository = "https://github.com/cumulus13/showpid"
homepage = "https://github.com/cumulus13/showpid"
readme = "README.md"
keywords = ["cli", "pid", "window", "foreground", "cross-platform"]
categories = ["command-line-utilities"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Uses built-in osascript binary; no extra crates needed

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap-version-flag = "1.0.5"
